# premiumize-cli

./: .gitignore  .hlint.yaml  .ormolu  CLAUDE.md  README.md  flake.nix  premiumize-cli.cabal  premiumize-cli.hs
app/: Main.hs
src/PremiumizeCli/: API.hs  CLI.hs  Types.hs
